# libsupcxx

./: .gitignore  BUILD.go  CMakeLists.txt  MODULE  README.md  build-cross-compiler.sh
RULES/boot/: boot.go
RULES/config/: config.go
RULES/crosscc/: crosscc.go
RULES/crosscc/crosslib/: crosslib.go
RULES/flags/: flags.go
RULES/libsupcxx/: libsupcxx.go
RULES/libsupcxx/lib/: lib.go
RULES/libsupcxx/xlib/: xlib.go
RULES/platform/: platform.go
boot/: bootinfo.hh
boot/i686/: CMakeLists.txt  crt0.S  crt1.S  crt4.S  io.cc  kernel.ld  multiboot.cc  setup.cc
boot/linux-x86_64/: BUILD.go  CMakeLists.txt  crt0.S  io.cc  kernel.ld  setup.cc  syscall.h  toolchain.cmake
boot/raspi3/: BUILD.go  CMakeLists.txt  crt0.S  io.cc  kernel.ld  setup.cc  toolchain.cmake
boot/x86_64/: BUILD.go  CMakeLists.txt  crt0.S  crt1.S  crt4.S  io.cc  kernel.ld  multiboot.cc  setup.cc  toolchain.cmake
build-dbt-cross-compiler/: build-dbt-cross-compiler.sh
build-dbt-cross-compiler/BUILD-go/aarch64-elf/: TEMPLATE-BUILD.go
build-dbt-cross-compiler/BUILD-go/x86_64-elf/: TEMPLATE-BUILD.go
build-dbt-cross-compiler/BUILD_go/aarch64-elf/: BUILD.go
build-dbt-cross-compiler/BUILD_go/x86_64-elf/: BUILD.go
cmake/: Kernel.cmake  i686-elf.cmake  i686.cmake  raspi3.cmake  x86_64-elf.cmake  x86_64.cmake
io/: BUILD.go  CMakeLists.txt  io.cc  io.hh  memory.hh  printf.cc  printf.hh  string.cc  string.hh  vga.cc  vga.hh
libruncxx/: BUILD.go  CMakeLists.txt  abort.cc  config.hh  dtors.cc  eh_alloc.cc  eh_globals.cc  exit.cc  guard.cc  memory.cc  string.cc
libsupcxx/include/: BUILD.go  cfloat  climits  cstdalign  cstdbool  cstddef  cstdint  cstdlib  cstring  exception  initializer_list  limits  new  type_traits  typeinfo
libsupcxx/include/bits/: c++config.h  exception.h  hash_bytes.h
libsupcxx/src/: BUILD.go  CMakeLists.txt  array_type_info.cc  bad_alloc.cc  bad_array_new.cc  bad_cast.cc  bad_typeid.cc  class_type_info.cc  cstring.cc  cxxabi.h  cxxabi_forced.h  cxxabi_init_exception.h  del_op.cc  del_opnt.cc  del_ops.cc  del_opv.cc  del_opvnt.cc  del_opvs.cc  dyncast.cc  eh_aux_runtime.cc  eh_call.cc  eh_catch.cc  eh_exception.cc  eh_personality.cc  eh_term_handler.cc  eh_terminate.cc  eh_throw.cc  eh_unex_handler.cc  enum_type_info.cc  exception_defines.h  function_type_info.cc  fundamental_type_info.cc  hash_bytes.cc  new_handler.cc  new_op.cc  new_opnt.cc  new_opv.cc  new_opvnt.cc  pbase_type_info.cc  pmem_type_info.cc  (+8 more)
patches/qemu/: 0001-hw-i386-multiboot.c-Don-t-refuse-to-boot-ELF64-binar.patch
tests/: BUILD.go  CMakeLists.txt  test-00-global-ctors-dtors.cc  test-01-initializers-operators.cc  test-02-virtuals.cc  test-03-heap.cc  test-04-rtti.cc  test-05-local-statics.cc  test-06-trivial-exception.cc  test-07-throw-clean-up-rethrow.cc  test-08-ccompat.cc  test-09-numeric-limits.cc  test-10-type-traits.cc
